styles/sass/utility/_utility-classes.scss
@import '../variables/colors'; // import color variables
@import '../variables/typography'; // import typography variables

@mixin gap($gap: 1rem) {
    gap: $gap;
}

.flex {
    display: flex;
    @include gap();
}

.flex-grow {
    flex-grow: 1;
}

.grid {
    display: grid;
    @include gap();
}

.container {
    padding-inline: 2em; // modern padding declaration -> padding left and right
    margin-inline: auto; // margin left and right
    max-width: 80rem;
}

// screent reader only
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: no-wrap; // added line
    border: 0;
}

// *********************************************************
// COLORS
// *********************************************************


// backgrounds
.bg-dark { background-color: hsl($clr-dark); }
.bg-light { background-color: hsl($clr-light-blue); }
.bg-white { background-color: hsl($clr-white); }

// text
.text-dark { color: hsl($clr-dark); }
.text-light { color: hsl($clr-light-blue); }
.text-white { color: hsl($clr-white); }

// *********************************************************
// TYPOGRAPHY
// *********************************************************

// font family
.ff-serif { font-family: $ff-serif; }
.ff-sans-cond { font-family: $ff-sans-cond; }
.ff-sans-normal { font-family: $ff-sans-normal; }

// letter spacing
.letter-spacing-1 { @include letter-spacing(4.75px); }
.letter-spacing-1 { @include letter-spacing(2.7px); }
.letter-spacing-1 { @include letter-spacing(2.35px); }

// uppercase
.uppercase { text-transform: uppercase; }

// font size
.fs-900 { font-size: $fs-900; }
.fs-800 { font-size: $fs-800; }
.fs-700 { font-size: $fs-700; }
.fs-600 { font-size: $fs-600; }
.fs-500 { font-size: $fs-500; }
.fs-400 { font-size: $fs-400; }
.fs-300 { font-size: $fs-300; }
.fs-200 { font-size: $fs-200; }

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
    line-height: 1.1;
}

